# drujba-bot

./: README.md  for_bot_drujba (1).drawio  setup.py
bot_drujba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
drujba/: Address_book.py  Bot.py  Dockerfile  FolderPath.py  Notes.py  Notes_book.py  Record.py  Style.py  Untitled Diagram.drawio  __init__.py  account.py  app.py  decorators.py  pyproject.toml  requirements.txt  sort_files.py
drujba/Accounts/: vlad_account.txt
